# cortex-m0-baremetal

./: .clang-format  .gitignore  CMakeLists.txt  README.md  _build.sh  _erase.sh  _flash.sh  package-lock.json  package.json  pyocd.yaml  zzz.md
.devcontainer/: Dockerfile  devcontainer.json  dockerbuild.cmd
A31G12x/: CMakeLists.txt
A31G12x/ld/: stm32f031x6.ld
A31G12x/startup/: handlers_cm.cpp
src/: main.cpp
src/startup/: handlers_stm32.cpp  startup.cpp
